[package]
name = "past"
version = "2.0.0-rc"
edition = "2021"
authors = ["Adam Thrash <thrash@igbb.msstate.edu>"]
description = "Pathways Analysis Study Tool"
repository = "https://github.com/IGBB/PAST/"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive", "wrap_help"] }
coitrees = "0.2.1"
noodles = { version = "0.48.0", features = ["gff"] }
rand = "0.8.5"
regex = "1.10.2"
statrs = "0.16.0"
